prod/ingress/api-gateway-stripprefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
