prod/ingress/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    # Redirection automatique HTTP vers HTTPS
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-https@kubernetescrd
    # Cert-manager génère automatiquement le certificat Let's Encrypt
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - simon-prod.uksouth.cloudapp.azure.com
    secretName: prometheus-tls-cert
  rules:
  - host: simon-prod.uksouth.cloudapp.azure.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
